[package]
name = "scriptir"
version = "0.1.0"
edition = "2021"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
budvm = { git = "https://github.com/khonsulabs/budlang", version = "0.1.0" }
derive_more = { git = "https://github.com/JelteF/derive_more", version = "0.99.17" }
macro_rules_attribute = "0.1.3"
serde = { version = "1.0.151", features = ["derive"] }
serde_yaml = "0.9.16"
